<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    android:padding="10dp"
    android:orientation="vertical"
    style="@style/settings_item"
    android:background="@color/white_alpha"
     >
    <TextView
        android:id="@+id/settings_alert_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_alerts"
        android:paddingBottom="20dp"
        />

    <TextView
        android:id="@+id/settings_alert_news_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_alert_news"
        android:paddingTop="20dp"
        />
    <CheckBox
        android:id="@+id/settings_alert_news_sound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_alert_sound"
        android:drawableLeft="@drawable/device_access_volume_on"
        android:padding="2dp"
        />
    <CheckBox
        android:id="@+id/settings_alert_news_vibrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_alert_vibrate"
        android:drawableLeft="@drawable/device_vibrate"
        android:padding="2dp"
        />

    <TextView
        android:id="@+id/settings_alert_repeat_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_alert_repeat_head"
        android:paddingTop="20dp"
        android:drawableLeft="@drawable/navigation_refresh"
        />
    <CheckBox
        android:id="@+id/settings_alert_repeat_vibrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_alert_vibrate"
        android:drawableLeft="@drawable/device_vibrate"
        android:padding="2dp"
        />
    <TextView
        android:id="@+id/alert_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/settings_alert_schedule"
        />
    <TextView
        android:id="@+id/alert_schedule_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/settings_alert_schedule_desc"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        >
        <TextView
            android:id="@+id/refresh_atime_none"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/settings_alert_time_quiet"
            android:drawableLeft="@drawable/alert_none"
            />
        <TextView
            android:id="@+id/refresh_atime_vibrate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/settings_alert_time_vibrate"
            android:drawableLeft="@drawable/alert_vibrate"
            />
        <TextView
            android:id="@+id/refresh_atime_both"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/settings_alert_time_both"
            android:drawableLeft="@drawable/alert_both"
            />
    </LinearLayout>
    <GridView
        android:id="@+id/refresh_alert_time"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:numColumns="6"

        android:verticalSpacing="2dp"
        android:horizontalSpacing="2dp"
        android:stretchMode="columnWidth"
        android:gravity="center"
        android:layout_margin="5dp"
        android:background="@color/white_alpha"
        >

    </GridView>
</LinearLayout>
</ScrollView>