<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:paddingBottom="50dp"
    android:background="@color/white_alpha"
    >
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="0dp"
    android:orientation="vertical"
    android:layout_margin="0dp"
    android:clickable="true"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_shortcuts"
        style="@style/text_title"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_shortcuts_desc"
        style="@style/text_small"

        />
    <ImageView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/help_nav_toggle"
        android:layout_marginTop="10dp"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_features"
        style="@style/text_title"
        android:paddingTop="30dp"
        android:paddingBottom="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_edit_news"
        style="@style/text_small"
        android:drawableLeft="@drawable/content_feeds"
        android:layout_margin="5dp"
        android:drawablePadding="3dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_edit_Filters"
        style="@style/text_small"
        android:drawableLeft="@drawable/content_filter"
        android:layout_margin="5dp"
        android:drawablePadding="3dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_settings"
        style="@style/text_small"
        android:drawableLeft="@drawable/action_settings"
        android:layout_margin="5dp"
        android:drawablePadding="3dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_notify"
        style="@style/text_small"
        android:drawableLeft="@drawable/action_settings"
        android:layout_margin="5dp"
        android:drawablePadding="3dp"
        />
</LinearLayout>
    </ScrollView>