<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="0dp"
    android:layout_margin="0dp"
    android:clickable="true"
    >
	<LinearLayout
        android:id="@+id/news_show_feeds"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:padding="10dp"
            android:paddingTop="5dp"
		    android:orientation="vertical"
        android:background="@color/white_alpha"
		    >
        <run.brief.b.bButton
            android:id="@+id/news_btn_to_filters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/news_key_title"
            android:drawableRight="@drawable/content_filter"
            android:layout_marginBottom="10dp"
            android:gravity="right|center_vertical"
            android:layout_gravity="right|center_vertical"
            android:visibility="gone"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/video_channels"
                />
            <Button
                android:id="@+id/btn_feed_http"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="http/https"
                style="@style/text_small"
                />
            <ImageView
                android:id="@+id/btn_video_youtube"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:src="@drawable/logo_youtube"
                />
            <ImageView
                android:id="@+id/btn_video_vimeo"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:src="@drawable/logo_vimeo"
                android:visibility="gone"
                />
        </LinearLayout>
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"

		    >
		    <EditText 
		        android:id="@+id/news_add_own_feed"
			    android:layout_width="0dp"
			    android:layout_weight="1"
			    android:layout_height="wrap_content"
                android:imeOptions="flagNoExtractUi"
                android:hint="@string/news_custom_added_note"
		        />
		    <Button
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/label_add"
			    android:id="@+id/news_btn_add"
		        />
		</LinearLayout>

		<TextView
            android:id="@+id/news_filter_text_kw11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/news_select_title"
            android:paddingTop="20dp"
            />
		<ExpandableListView
            android:id="@+id/news_feeds_list"
		   android:layout_width="match_parent"
		   android:layout_height="wrap_content"
		   android:gravity="center_vertical"
		   android:textStyle="bold"
		   android:textSize="16sp"
		   android:textColor="#000000"
		   android:padding="0dp"
		   android:layout_margin="0dp"

		/>
	</LinearLayout>
    <ScrollView
        android:id="@+id/news_show_filters"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingTop="5dp"
        android:visibility="gone">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <run.brief.b.bButton
            android:id="@+id/news_btn_to_feeds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/news_feeds_title"
            android:drawableRight="@drawable/navigation_previous_item"
            android:layout_marginBottom="10dp"
            android:gravity="right|center_vertical"
            android:layout_gravity="right|center_vertical"
android:visibility="gone"
            />
        <TextView
            android:id="@+id/news_filter_text_kw1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/news_key_title"
            style="@style/heading"
            />
        <TextView
            android:id="@+id/news_filter_text_kw2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/news_key_style"
            android:layout_marginTop="20dp"
            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/news_key_style_include"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/news_key_style_include"
                />
            <RadioButton android:id="@+id/news_key_style_disclude"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/news_key_style_disclude"
                />

        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/news_filter_text_kw8"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/news_key_style_include_desc"
                style="@style/text_small"
                />
            <TextView
                android:id="@+id/news_filter_text_kw9"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/news_key_style_disclude_desc"
                style="@style/text_small"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/news_filter_text_kw3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/news_key_style_include"
            android:layout_marginTop="20dp"
            />
        <GridView
            android:id="@+id/news_add_key_grid_include"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:numColumns="auto_fit"
            android:columnWidth="90dp"
            android:stretchMode="columnWidth"
            android:background="@color/grey_alpha"
            ></GridView>
        <TextView
            android:id="@+id/news_filter_text_kw4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/news_key_include_explain"
            android:padding="3dp"
            style="@style/note_text"
            />

        <EditText
            android:id="@+id/news_add_key_text_include"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:imeOptions="flagNoExtractUi"
            />

        <TextView
            android:id="@+id/news_filter_text_kw5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/news_key_style_disclude"
            android:layout_marginTop="30dp"
            />
        <GridView
            android:id="@+id/news_add_key_grid_disclude"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:numColumns="auto_fit"
            android:columnWidth="90dp"
            android:stretchMode="columnWidth"
            android:background="@color/grey_alpha"
            ></GridView>
        <TextView
            android:id="@+id/news_filter_text_kw6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/news_key_disclude_explain"
            style="@style/note_text"
            android:padding="3dp"
            />

        <EditText
            android:id="@+id/news_add_key_text_disclude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:imeOptions="flagNoExtractUi"
            />

    </LinearLayout>
    </ScrollView>
	<LinearLayout 
		    android:id="@+id/empty_news_feeds"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:padding="10dp"
		    android:orientation="vertical"
		    android:visibility="gone"
		    android:gravity="center"
		    android:layout_marginLeft="30dp"
		    android:paddingRight="30dp"

		    >
	<TextView
        android:id="@+id/news_filter_text_kw7"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/no_data" 
	    style="@style/field_title"
	    android:gravity="center"
	    android:layout_marginBottom="20dp"
	    />
    <ImageView
        android:id="@+id/info_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/downloading200x140"
        android:gravity="center"
         />

	<TextView 
	    android:id="@+id/news_open_select_sources"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/no_data_news"
	    android:gravity="center"
	    android:layout_marginTop="20dp"

	    />

	</LinearLayout>
    <RelativeLayout
        android:id="@+id/news_reindexing"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_alpha_strong"
        android:visibility="gone"
        >
        <TextView
            android:id="@+id/news_reindex_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_reindex"
            android:textColor="@color/white"
            />
    </RelativeLayout>
</RelativeLayout>