<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:paddingBottom="50dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:orientation="vertical"
        android:layout_margin="0dp"

        android:clickable="true"
        android:isScrollContainer="true"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_theme"
            style="@style/text_title"
            android:paddingBottom="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_theme_desc"
            style="@style/text_small"
            android:paddingBottom="20dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:id="@+id/settings_theme_dark"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:src="@drawable/theme_dark"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_theme_dark"
                    style="@style/text_title"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/settings_theme_light"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:src="@drawable/theme_light"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_theme_light"
                    style="@style/text_title"
                    android:layout_gravity="center_horizontal"
                    />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_archive_images_head"
                    style="@style/text_title"
                    android:paddingTop="40dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_archive_images"
                    style="@style/text_small"
                    android:paddingTop="15dp"
                    android:gravity="end|right"
                    />
                <TextView
                    android:id="@+id/settings_images_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_archive_images"
                    style="@style/text_small"
                    android:paddingTop="15dp"
                    />
            </LinearLayout>

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/numberPickerImages"
                android:scaleX=".7"
                android:scaleY=".7"
                android:padding="0dp"
                android:layout_margin="0dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_days"
                style="@style/text_small"
                android:paddingTop="75dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_archive_stories_head"
                    style="@style/text_title"
                    android:paddingTop="40dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_archive_stories"
                    android:gravity="end|right"
                    style="@style/text_small"
                    android:paddingTop="15dp"
                    />
                <TextView
                    android:id="@+id/settings_stories_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_archive_stories"

                    style="@style/text_small"
                    android:paddingTop="15dp"
                    />
            </LinearLayout>

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/numberPickerStories"
                android:scaleX=".7"
                android:scaleY=".7"
                android:padding="0dp"
                android:layout_margin="0dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_days"
                style="@style/text_small"
                android:paddingTop="75dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp"
            >
            <CheckBox
                android:id="@+id/disable_javascript"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disable_javascript"
                style="@style/text_small"
                />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
